--- a/index.html
+++ b/index.html
@@ -35,62 +35,14 @@
         </div>
         </div>
     </nav>
-    <div class="content px-5">
+    <div class="content px-md-5">
         <div class="container" style="padding-top: 70px;">
             <div class="form position-relative align-items-center d-flex">
                 <input type="text" placeholder="Find your location..." class="w-100" id="location">
                 <button class="btn" id="btnSearch">Find</button>
             </div>
             <div class="cards">
-                <!-- <div class="card">
-                    <div class="day d-flex justify-content-between p-2">
-                        <div>Friday</div>
-                        <div>6December</div>
-                    </div>
-                    <div class="card-content py-5 px-3">
-                    <h3 class="fs-5">Cairo</h3>
-                    <h2>20.1<sup>o</sup>C</h2>
-                    <img src="./images/116.png" alt="icon">
-                    <p class="text-info">Clear</p>
-                    <div class="icons d-flex gap-3">
-                        <div class="d-flex align-items-center gap-1">
-                            <img src="./images/icon-umberella.png" alt="icon-umberella">
-                            <p class="mb-0">20%</p>
-                        </div>
-                        <div class="d-flex align-items-center gap-1">
-                            <img src="./images/icon-wind.png" alt="icon-wind">
-                            <p class="mb-0">18km/h</p>
-                        </div>
-                        <div class="d-flex align-items-center gap-1">
-                            <img src="./images/icon-compass.png" alt="icon-compass">
-                            <p class="mb-0">East</p>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-                <div class="card" style="background-color: #262936;" >
-                    <div style="background-color: #222531;" class="day d-flex justify-content-center p-2">
-                        <div>Friday</div>
-                    </div>
-                    <div class="card-content py-5 px-3 text-center">
-                    <img src="./images/116.png" alt="icon">
-                    <h2 class="fs-1">20.1<sup>o</sup>C</h2>
-                    <p style="font-size: 16px; ">20.1<sup>o</sup>C</p>
-                    <p class="text-info">Clear</p>
-                    
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="day d-flex justify-content-center p-2">
-                        <div>Friday</div>
-                    </div>
-                    <div class="card-content py-5 px-3 text-center">
-                    <img src="./images/116.png" alt="icon">
-                    <h2 class="fs-1">20.1<sup>o</sup>C</h2>
-                    <p style="font-size: 16px; ">20.1<sup>o</sup>C</p>
-                    <p class="text-info">Sunny</p>
-                    </div>
-                </div> -->
+               
             </div>           
         </div>
     </div>
